# SFML-Physics

./: .gitignore.txt  CMakeLists.txt  CMakePresets.json  README.md  SFML-Physics.sln
Engine/: BoxRendererComponent.h  CircleRendererComponent.h  ColliderComponent.h  CollisionSystem.h  Component.h  Engine.vcxproj  Engine.vcxproj.filters  GameObject.h  GravityComponent.h  OrbitWallsBounceComponent.h  PhysicsScene.cpp  PhysicsScene.h  RotationComponent.h  TransformComponent.h  VelocityComponent.h
Engine/x64/Debug/Engine.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  Engine.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Engine/x64/Release/Engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Engine.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Game/: Ball.cpp  Ball.h  Game.vcxproj  Game.vcxproj.filters  Hitbox.cpp  Hitbox.h  Platform.cpp  Platform.h  main.cpp
Game/x64/Debug/: Game.exe.recipe  vc143.idb
Game/x64/Debug/Game.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  (+4 more)
Game/x64/Release/: Game.exe.recipe  Game.iobj  Game.ipdb
src/: Ball.cpp  Ball.h  Hitbox.cpp  Hitbox.h  main.cpp
src/Engine/: CircleWallComponent.h  Engine.h  OrbitWallsBounceComponent.h  TransformComponent.h
src/Engine/scenes/: PhysicsScene.cpp  PhysicsScene.h
src/engine/: ColliderComponent.cpp  Engine.cpp  Engine.h  RectangleRendererComponent.h  Scene.h  SpriteBoundsBounceComponent.h
src/engine/scenes/: PhysicsScene.cpp  PhysicsScene.h
x64/Debug/: Engine.idb  Engine.lib
(+8 files in other folders)
